# tower_defense

./: .gitignore  Anchor.toml  README.md  gTOKEN.MD  package-lock.json  package.json  tsconfig.json
.github/instructions/: CORE.instructions.md
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  styles.css
apps/web/src/components/: ControlPanel.tsx  MatchSidebar.tsx
apps/web/src/game/: GameCanvas.tsx  phaserScene.ts
apps/web/src/lib/: assets.ts  catalog.ts  magicblock.ts  matchEngine.ts  program.ts  types.ts
assets/soc_library/: Credit List - MUST READ.txt
assets/soc_library/Art/: Thumbs.db
assets/soc_library/Icons/Battle Roar/: BTNBattleRoar.blp  DISBTNBattleRoar.blp
assets/soc_library/Icons/Death Knight (Old)/: BTNDeathKnight.blp  DISBTNDeathKnight.blp
assets/soc_library/Icons/Demoralizing Roar/: BTNDemoralizingRoar.blp  DISBTNDemoralizingRoar.blp
assets/soc_library/Icons/Disabling Shot/: BTNDisablingShot.blp  DISBTNDisablingShot.blp
assets/soc_library/Icons/Elven Archer/: BTNElvenArcher.blp  DISBTNElvenArcher.blp
assets/soc_library/Screenshots/: Thumbs.db
docs/: DEVNET.md  DEVNET_DEPLOYMENT_PLAN.md  DEVNET_P5_UPDATE.md  DEVNET_P5_UPDATE_PLAN.md
docs/magicblock-dev-skill-main/skill/: COMPREHENSIVE_INSTRUCTIONS.md
programs/fortress_wars/: Cargo.toml
programs/fortress_wars/src/: lib.rs
scripts/devnet/: deploy.ts  run-sample-match.ts  seed.ts  shared.ts
scripts/replay/: rebuild-match.ts  replay-devnet-match.ts
tests/: fortress-wars.spec.ts  multiplayer.spec.ts  replay-parity.spec.ts  settlement.spec.ts
(+379 files in other folders)
