[package]
name = "fortress_wars"
version = "0.1.0"
description = "Deterministic tug-of-war tower defense game for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fortress_wars"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
